Particle texture keyframes missing from Graph Editor unless PS has keyframes #57111

Closed
opened 2018-10-09 01:56:32 +02:00 by Georg K · 6 comments

System Information
Ubuntu 18.04 x64, Radeon HD7770

Blender Version
Broken: 2.79b, blender-2.79-4b0b91aee07-linux-glibc219-x86_64, 2.80 Alpha2 hash cc92d83d39
Worked: ?

Short description of error
Can't view/edit particle texture keyframes (e.g. Clouds: NoiseSize/Colors/ImageMapping/ImageSampling, Blend: Colors, Blend, Distorted Noise: Colors, Distorted Noise, etc. ...) without a trick in 2.79.
Influence/Mapping properties of particle texture always seem to work (setting a keyframe there can also help showing the invisible keyframes).

Exact steps for others to reproduce the error
In the default scene with the cube selected,
switch main window to Graph editor
go to particles tab in properties editor,
add a particle texture
go to texture properties
press I to add a keyframe to any property (not Influence/Mapping)
In the Graph editor, it is not displayed.
Now in 2.79x, if I add a keyframe on a particle system property (or particle texture Influence/Mapping property), the texture keyframes will be displayed in the Graph editor and they remain visible even after deleting this "helper keyframe". Also keeps working after saving/closing blender/reopening the file.
But in 2.80, the "helper keyframe" trick does not work. While the keyframes are visible in the graph editor without that trick, there is only the higher-level channel "Particle settings" but the subchannel Texture and the appropriate properties channels (with the eye buttons) are missing, so if there are keyframes on multiple properties you won't know which is which.

**System Information** Ubuntu 18.04 x64, Radeon HD7770 **Blender Version** Broken: 2.79b, blender-2.79-4b0b91aee07-linux-glibc219-x86_64, 2.80 Alpha2 hash cc92d83d398 Worked: ? **Short description of error** Can't view/edit particle texture keyframes (e.g. Clouds: NoiseSize/Colors/ImageMapping/ImageSampling, Blend: Colors, Blend, Distorted Noise: Colors, Distorted Noise, etc. ...) without a trick in 2.79. Influence/Mapping properties of particle texture always seem to work (setting a keyframe there can also help showing the invisible keyframes). **Exact steps for others to reproduce the error** In the default scene with the cube selected, switch main window to Graph editor go to particles tab in properties editor, add a particle texture go to texture properties press I to add a keyframe to any property (not Influence/Mapping) In the Graph editor, it is not displayed. Now in 2.79x, if I add a keyframe on a particle system property (or particle texture Influence/Mapping property), the texture keyframes will be displayed in the Graph editor and they remain visible even after deleting this "helper keyframe". Also keeps working after saving/closing blender/reopening the file. But in 2.80, the "helper keyframe" trick does not work. While the keyframes are visible in the graph editor without that trick, there is only the higher-level channel "Particle settings" but the subchannel Texture and the appropriate properties channels (with the eye buttons) are missing, so if there are keyframes on multiple properties you won't know which is which.
Author

Added subscriber: @georgK

Added subscriber: @georgK
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-10-09 14:05:19 +02:00
Member

Can confirm this, will have a look...

Can confirm this, will have a look...
Member

But in 2.80, the "helper keyframe" trick does not work. While the keyframes are visible in the graph editor without that trick, there is only the higher-level channel "Particle settings" but the subchannel Texture and the appropriate properties channels (with the eye buttons) are missing, so if there are keyframes on multiple properties you won't know which is which.

At least that seems to have improved since, so the 2.79 trick seems to work now.
Rest still holds true though.

> But in 2.80, the "helper keyframe" trick does not work. While the keyframes are visible in the graph editor without that trick, there is only the higher-level channel "Particle settings" but the subchannel Texture and the appropriate properties channels (with the eye buttons) are missing, so if there are keyframes on multiple properties you won't know which is which. At least that seems to have improved since, so the 2.79 trick seems to work now. Rest still holds true though.
Philipp Oeser removed their assignment 2019-11-12 14:43:07 +01:00

This issue was referenced by a854840e76

This issue was referenced by a854840e76ae3e0724531524e8b1d7a4cd63ea1d
Sybren A. Stüvel self-assigned this 2020-01-02 18:13:02 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57111
No description provided.