Fix T57111: Particle texture keyframes missing from Graph Editor

The entire particle system was skipped when the particle system itself did
not have any animation data. This caused the animation data on the texture
to be skipped.